--- a/20191116_Slide.ipynb
+++ b/20191116_Slide.ipynb
@@ -8,8 +8,8 @@
     }
    },
    "source": [
-    "## 今さらOpen MVを触ってみた\n",
-    "# K.Miura"
+    "# 今さらOpen MVを触ってみた\n",
+    "K.Miura"
    ]
   },
   {
@@ -41,15 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Hello world\")"
+    "print(\"Hello World\")"
    ]
   },
   {
