--- a/20191116_Slide.ipynb
+++ b/20191116_Slide.ipynb
@@ -97,6 +97,22 @@
     }
    },
    "source": [
+    "# Open MVについて\n",
+    "- micro pythonで動作するマシンビジョンに特化したボード\n",
+    "- 専用の開発環境をインストールするだけでセットアップができる\n",
+    "- ピンヘッダもついているのでボードの拡張も可能\n",
+    "- レンズの変換が可能（赤外線カメラ、広角レンズなど）\n",
+    "- ARM Cortex M7搭載"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# 開封の儀\n",
     "\n",
     "- レンズにはキャップがついている\n",
