Added build link

--- a/20191116_Slide.ipynb
+++ b/20191116_Slide.ipynb
@@ -23,7 +23,7 @@
     "# 自己紹介\n",
     "- 三浦 耕生(こうき)\n",
     "- 大学院生、ロボット工学専攻\n",
-    "- Code for AICHI所属\n",
+    "- TechAcademyのジュニアメンター\n",
     "- Twitter: @k_miura_io\n",
     "- Facebook: koki.miura05"
    ]
@@ -36,7 +36,7 @@
     }
    },
    "source": [
-    "※このスライドはjupyter-notebookを使用しています"
+    " ※このスライドはjupyter-notebookを使用しています"
    ]
   },
   {
@@ -292,6 +292,18 @@
     "- 今後は自作の学習モデルをOpenMV上で動かしてみたい（そもそも自作の学習モデル作ったことないw）\n",
     "- トラッキングを取り入れたロボットを使ってみたい（願望）\n",
     "- それでも値段が高い→M○StickVほしい…"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 最後に宣伝\n",
+    "11/17（日）に東京テレコムセンターにて開催されるサイエンスアゴラのIBMブースでCall for Codeの作品紹介とデモを行う予定\n"
    ]
   },
   {
