--- a/20191116/20191116_Slide.ipynb
+++ b/20191116/20191116_Slide.ipynb
@@ -151,18 +151,38 @@
     }
    },
    "source": [
+    "# スライドのリンク\n",
+    "<img src=\"./imgs/qrcode.png\" width=45%>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     " ※このスライドはjupyter-notebookを使用しています"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World\")"
    ]
